--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ header.shadow .logo{
   font-size: 24px;
   cursor: pointer;
   z-index: 1000001;
-  display: none;
+  display:none;
 }
 
 .btn {
@@ -265,5 +265,98 @@ header.shadow .logo{
   text-align: center;
   color: var(--bg-color);
   padding: 20px;
+
+}
+
+@media (max-width:1080px){
+  .home-text{
+    padding: 0 100px;
+  }
+}
+
+@media (max-width:991px){
+  header{
+    padding: 18px 4%;
+  }
+  section {
+    padding: 50px 4%;
+  }
+  .home-text {
+    padding:0 4%;
+  }
+  .home-text h1 {
+    font-size: 32px;
+  }
+}
+
+@media (max-width:774px){
+  header{
+    padding: 12px 4%;
+  }
+  #menu-icon {
+    display: initial;
+    color: var(--bg-color)
+  }
+  header.shadow #menu-icon{
+    color:var(--text-color)
+  }
+  .navbar{
+    position: absolute;
+    top: -570%;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    background: var(--bg-color);
+    row-gap: 22px;
+    padding: 20px;
+    box-shadow: 4px 4px 0 4px rgb(14 55 54 / 15%) ;
+    transition: 0.2s all linear;
+    text-align: center;
+  }
+  .navbar a{
+    width: 100%;
+    color: var(--text-color);
+  }
+
+  .navbar a:hover{
+    color: var(--main-color);
+    border-bottom: 2px solid var(--main-color);
+  }
+
+  .navbar a::after {
+    display: none;
+  }
+  .navbar.active{
+    top: 100%;
+  }
+  .home-text h1{
+    font-size: 22px;
+  }
+  .btn {
+    padding: 9px 18px;
+  }
+  .movies-container{
+    grid-template-columns: repeat(auto-fit, minmax(160px,auto) );
+  }
+}
+
+@media (max-width: 370px){
+  header {
+    padding: 6px 4%;
+  }
+  .home-text h1{
+    font-size: 27px;
+  }
+  .play{
+    right: 2rem;
+    bottom: 8%
+  }
+  .play .bx{
+    padding: 7px;
+  }
+  .movies-container{
+    grid-template-columns: repeat(auto-fit, minmax(140px,auto) );
+  }
 
 }
