--- a/style.css
+++ b/style.css
@@ -64,6 +64,35 @@ header.shadow .logo{
   color: var(--text-color);
 }
 
+.form {
+border: 0px;
+}
+
+.search {
+  border-radius: 30px;
+  padding: 10px;
+  background-color: transparent;
+  color: var(--bg-color);
+  border-width: 1px;
+  border-color: var(--bg-color);
+}
+
+.search:focus {
+  padding: 10px;
+  background-color: transparent;
+  color: var(--main-color);
+  border-width: 1px;
+  border-color: var(--bg-color); 
+}
+
+.search::placeholder {
+  padding: 10px;
+  background-color: transparent;
+  color:#696969;
+  border-width: 1px;
+  border-color: var(--bg-color);
+}
+
 .logo {
   font-size: 18px;
   font-weight: 600;
@@ -103,12 +132,64 @@ header.shadow .logo{
   bottom: -4px;
   left: 0;
   transition: 0.4s all linear;
-
 }
 
 .navbar a:hover::after,
 .navbar .home-active::after {
   width: 100%;
+}
+
+#main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.movie {
+  width: 200px;
+  margin: 20px;
+  background-color: var(--main-color);
+  position: relative;
+  overflow: hidden;
+}
+
+.movie img {
+  width: 100%;
+}
+
+.movie-info {
+  color: var(--bg-color);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 16px 16px;
+  letter-spacing: 0.5px;
+}
+
+.movie-info h3 {
+  margin-top: 0;
+}
+
+.movie-info span {
+  padding: 4px 8px;
+  font-size: 13px;
+}
+
+.riassunto {
+  color: var(--text-color);
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--bg-color);
+  padding: 16px;
+  max-height: 100%;
+  transform: translateY(101%);
+  transition:transform 0.5s ease-in;
+}
+
+.movie:hover .riassunto {
+  transform: translateY(0);
 }
 
 #menu-icon {
@@ -201,7 +282,7 @@ header.shadow .logo{
   transition: 0.2s all linear;
 }
 
-.heading {
+.tipologia {
   max-width: 968px;
   margin-left: auto;
   margin-right: auto;
@@ -265,98 +346,5 @@ header.shadow .logo{
   text-align: center;
   color: var(--bg-color);
   padding: 20px;
-
-}
-
-@media (max-width:1080px){
-  .home-text{
-    padding: 0 100px;
-  }
-}
-
-@media (max-width:991px){
-  header{
-    padding: 18px 4%;
-  }
-  section {
-    padding: 50px 4%;
-  }
-  .home-text {
-    padding:0 4%;
-  }
-  .home-text h1 {
-    font-size: 32px;
-  }
-}
-
-@media (max-width:774px){
-  header{
-    padding: 12px 4%;
-  }
-  #menu-icon {
-    display: initial;
-    color: var(--bg-color)
-  }
-  header.shadow #menu-icon{
-    color:var(--text-color)
-  }
-  .navbar{
-    position: absolute;
-    top: -570%;
-    left: 0;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    background: var(--bg-color);
-    row-gap: 22px;
-    padding: 20px;
-    box-shadow: 4px 4px 0 4px rgb(14 55 54 / 15%) ;
-    transition: 0.2s all linear;
-    text-align: center;
-  }
-  .navbar a{
-    width: 100%;
-    color: var(--text-color);
-  }
-
-  .navbar a:hover{
-    color: var(--main-color);
-    border-bottom: 2px solid var(--main-color);
-  }
-
-  .navbar a::after {
-    display: none;
-  }
-  .navbar.active{
-    top: 100%;
-  }
-  .home-text h1{
-    font-size: 22px;
-  }
-  .btn {
-    padding: 9px 18px;
-  }
-  .movies-container{
-    grid-template-columns: repeat(auto-fit, minmax(160px,auto) );
-  }
-}
-
-@media (max-width: 370px){
-  header {
-    padding: 6px 4%;
-  }
-  .home-text h1{
-    font-size: 27px;
-  }
-  .play{
-    right: 2rem;
-    bottom: 8%
-  }
-  .play .bx{
-    padding: 7px;
-  }
-  .movies-container{
-    grid-template-columns: repeat(auto-fit, minmax(140px,auto) );
-  }
 
 }
