--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 :root {
   --main-color: #50C878;
-  --text-color: #020307;
+  --text-color: #100c08;
   --bg-color: #fff;
 }
 
@@ -151,6 +151,12 @@ border: 0px;
   justify-content: center;
 }
 
+#container2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 h3 {
   padding: 8px;
 }
@@ -169,33 +175,12 @@ h3 {
   width: 100%;
 }
 
+#movie1:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
 
-/*
 #movie-info1 {
-  width: 100%;
   color: var(--text-color);
-  display: flex;
-  align-items:center;
-  justify-content: space-between;
-  padding: 8px 12px;
-  letter-spacing: 0.5px;
-  flex-wrap: wrap;
-}
-
-#movie-info1 h3 {
-  margin-top: 0;
-  font-size: 16px;
-  padding: 5px;
-}
-
-#movie-info1 span {
-  color: var(--main-color);
-  padding: 4px 0px;
-  font-size: 14px;
-}
-*/
-#movie-riassunto1 {
-  color: var(--bg-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -207,7 +192,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#movie1:hover #movie-riassunto1 {
+#movie1:hover #movie-info1 {
   transform: translateY(0);
 }
 
@@ -221,33 +206,16 @@ h3 {
   overflow: hidden;
 }
 
+#movie2:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #movie2 img {
   width: 100%;
 }
-/*
+
 #movie-info2 {
   color: var(--text-color);
-  display: flex;
-  align-items:center;
-  justify-content: space-between;
-  padding: 8px 12px;
-  letter-spacing: 0.5px;
-  flex-wrap: wrap;
-}
-
-#movie-info2 h3 {
-  margin-top: 0;
-  font-size: 16px;
-}
-
-#movie-info2 span {
-  color: var(--main-color);
-  padding: 4px 0px;
-  font-size: 14px;
-}*/
-
-#movie-riassunto2 {
-  color: var(--bg-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -259,7 +227,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#movie2:hover #movie-riassunto2 {
+#movie2:hover #movie-info2 {
   transform: translateY(0);
 }
 
@@ -271,6 +239,10 @@ h3 {
   background-color: var(--bg-color);
   position: relative;
   overflow: hidden;
+}
+
+#movie3:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
 }
 
 #movie3 img {
@@ -298,8 +270,8 @@ h3 {
   font-size: 14px;
 }
 */
-#movie-riassunto3 {
-  color: var(--bg-color);
+#movie-info3 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -311,7 +283,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#movie3:hover #movie-riassunto3 {
+#movie3:hover #movie-info3 {
   transform: translateY(0);
 }
 
@@ -323,6 +295,10 @@ h3 {
   background-color: var(--bg-color);
   position: relative;
   overflow: hidden;
+}
+
+#movie4:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
 }
 
 #movie4 img {
@@ -350,8 +326,8 @@ h3 {
   font-size: 14px;
 }
 
-#movie-riassunto4 {
-  color: var(--bg-color);
+#movie-info4 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -363,7 +339,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#movie4:hover #movie-riassunto4 {
+#movie4:hover #movie-info4 {
   transform: translateY(0);
 }
 
@@ -375,6 +351,10 @@ h3 {
   background-color: var(--bg-color);
   position: relative;
   overflow: hidden;
+}
+
+#movie5:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
 }
 
 #movie5 img {
@@ -402,8 +382,8 @@ h3 {
   font-size: 14px;
 }
 
-#movie-riassunto5 {
-  color: var(--bg-color);
+#movie-info5 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -415,7 +395,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#movie5:hover #movie-riassunto5 {
+#movie5:hover #movie-info5 {
   transform: translateY(0);
 }
 
@@ -427,6 +407,10 @@ h3 {
   background-color: var(--bg-color);
   position: relative;
   overflow: hidden;
+}
+
+#movie6:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
 }
 
 #movie6 img {
@@ -454,8 +438,8 @@ h3 {
   font-size: 14px;
 }
 
-#movie-riassunto6 {
-  color: var(--bg-color);
+#movie-info6 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -467,7 +451,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#movie6:hover #movie-riassunto6 {
+#movie6:hover #movie-info6 {
   transform: translateY(0);
 }
 
@@ -479,6 +463,10 @@ h3 {
   background-color: var(--bg-color);
   position: relative;
   overflow: hidden;
+}
+
+#movie7:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
 }
 
 #movie7 img {
@@ -506,8 +494,8 @@ h3 {
   font-size: 14px;
 }
 
-#movie-riassunto7 {
-  color: var(--bg-color);
+#movie-info7 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -519,7 +507,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#movie7:hover #movie-riassunto7 {
+#movie7:hover #movie-info7 {
   transform: translateY(0);
 }
 
@@ -531,6 +519,10 @@ h3 {
   background-color: var(--bg-color);
   position: relative;
   overflow: hidden;
+}
+
+#movie8:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
 }
 
 #movie8 img {
@@ -558,8 +550,8 @@ h3 {
   font-size: 14px;
 }
 
-#movie-riassunto8 {
-  color: var(--bg-color);
+#movie-info8 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -571,7 +563,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#movie8:hover #movie-riassunto8 {
+#movie8:hover #movie-info8 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
@@ -582,6 +574,10 @@ h3 {
   background-color: var(--bg-color);
   position: relative;
   overflow: hidden;
+}
+
+#movie9:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
 }
 
 #movie9 img {
@@ -609,8 +605,8 @@ h3 {
   font-size: 14px;
 }
 
-#movie-riassunto9 {
-  color: var(--bg-color);
+#movie-info9 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -622,7 +618,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#movie9:hover #movie-riassunto9 {
+#movie9:hover #movie-info9 {
   transform: translateY(0);
 }
 
@@ -634,6 +630,10 @@ h3 {
   background-color: var(--bg-color);
   position: relative;
   overflow: hidden;
+}
+
+#movie10:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
 }
 
 #movie10 img {
@@ -661,8 +661,8 @@ h3 {
   font-size: 14px;
 }
 
-#movie-riassunto10 {
-  color: var(--bg-color);
+#movie-info10 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -674,7 +674,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#movie10:hover #movie-riassunto10 {
+#movie10:hover #movie-info10 {
   transform: translateY(0);
 }
 
@@ -690,12 +690,16 @@ h3 {
   overflow: hidden;
 }
 
+#serie1:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #serie1 img {
   width: 100%;
 }
 
-#serie-riassunto1 {
-  color: var(--bg-color);
+#serie-info1 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -707,7 +711,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#serie1:hover #serie-riassunto1 {
+#serie1:hover #serie-info1 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
@@ -720,12 +724,16 @@ h3 {
   overflow: hidden;
 }
 
+#serie2:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #serie2 img {
   width: 100%;
 }
 
-#serie-riassunto2 {
-  color: var(--bg-color);
+#serie-info2 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -737,7 +745,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#serie2:hover #serie-riassunto2 {
+#serie2:hover #serie-info2 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
@@ -750,12 +758,16 @@ h3 {
   overflow: hidden;
 }
 
+#serie3:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #serie3 img {
   width: 100%;
 }
 
-#serie-riassunto3 {
-  color: var(--bg-color);
+#serie-info3 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -767,7 +779,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#serie3:hover #serie-riassunto3 {
+#serie3:hover #serie-info3 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
@@ -780,12 +792,16 @@ h3 {
   overflow: hidden;
 }
 
+#serie4:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #serie4 img {
   width: 100%;
 }
 
-#serie-riassunto4 {
-  color: var(--bg-color);
+#serie-info4 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -797,7 +813,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#serie4:hover #serie-riassunto4 {
+#serie4:hover #serie-info4 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
@@ -810,12 +826,16 @@ h3 {
   overflow: hidden;
 }
 
+#serie5:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #serie5 img {
   width: 100%;
 }
 
-#serie-riassunto5 {
-  color: var(--bg-color);
+#serie-info5 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -827,7 +847,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#serie5:hover #serie-riassunto5 {
+#serie5:hover #serie-info5 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
@@ -840,12 +860,16 @@ h3 {
   overflow: hidden;
 }
 
+#serie6:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #serie6 img {
   width: 100%;
 }
 
-#serie-riassunto6 {
-  color: var(--bg-color);
+#serie-info6 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -857,7 +881,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#serie6:hover #serie-riassunto6 {
+#serie6:hover #serie-info6 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
@@ -870,12 +894,16 @@ h3 {
   overflow: hidden;
 }
 
+#serie7:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #serie7 img {
   width: 100%;
 }
 
-#serie-riassunto7 {
-  color: var(--bg-color);
+#serie-info7 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -887,7 +915,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#serie7:hover #serie-riassunto7 {
+#serie7:hover #serie-info7 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
@@ -900,12 +928,16 @@ h3 {
   overflow: hidden;
 }
 
+#serie8:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #serie8 img {
   width: 100%;
 }
 
-#serie-riassunto8 {
-  color: var(--bg-color);
+#serie-info8 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -917,7 +949,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#serie8:hover #serie-riassunto8 {
+#serie8:hover #serie-info8 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
@@ -930,12 +962,16 @@ h3 {
   overflow: hidden;
 }
 
+#serie9:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #serie9 img {
   width: 100%;
 }
 
-#serie-riassunto9 {
-  color: var(--bg-color);
+#serie-info9 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -947,7 +983,7 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#serie9:hover #serie-riassunto9 {
+#serie9:hover #serie-info9 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
@@ -960,12 +996,16 @@ h3 {
   overflow: hidden;
 }
 
+#serie10:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
 #serie10 img {
   width: 100%;
 }
 
-#serie-riassunto10 {
-  color: var(--bg-color);
+#serie-info10 {
+  color: var(--text-color);
   position: absolute;
   left: 0;
   right: 0;
@@ -977,11 +1017,50 @@ h3 {
   transition:transform 0.5s ease-in;
 }
 
-#serie10:hover #serie-riassunto10 {
+#serie10:hover #serie-info10 {
   transform: translateY(0);
 }
 /* ---------------------------------------------------- */
 
+/* RANDOM 
+
+#random {
+  width: 250px;
+  margin: 15px;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  position: relative;
+  overflow: hidden;
+}
+
+#random:hover {
+  box-shadow: 0px 0px 10px 2.5px var(--main-color);
+}
+
+#random img {
+  width: 100%;
+}
+
+#random-info {
+  color: var(--text-color);
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--main-color);
+  padding: 16px;
+  max-height: 100%;
+  transform: translateY(101%);
+  transition:transform 0.5s ease-in;
+}
+
+#random:hover #random-info {
+  transform: translateY(0);
+}
+
+
+*/
+/* ------------------------------------------------------------------- */
 
 
 #menu-icon {
@@ -992,15 +1071,16 @@ h3 {
 }
 
 
-.btn {
+#btn {
   padding: 11px 22.5px;
   background: var(--main-color);
   color: var(--bg-color);
   font-weight: 400;
   border-radius: 8px;
+  border-width: 0;
 }
 
-.btn:hover {
+#btn:hover {
   background: #006D5B;
 }
 
@@ -1132,13 +1212,104 @@ h3 {
   border: #50C878;
 }
 
-.card {
-  background-color: red;
+hr {
+  width: 100%;  
+  height: 1px;  
+  background-color: black;  
+  margin-bottom: 7px;  
+  margin-right: auto;  
+  margin-left: auto;  
+  margin-top: 9px;  
+  border-width: 0;  
+  border-color: white; 
+
 }
 
 .copyright {
   text-align: center;
   color: var(--bg-color);
   padding: 20px;
+  margin-top: 50px;
+}
+
+@media (max-width: 1080px) {
+  .home-text {
+    padding: 0 100px;
+  }
+}
+
+@media (max-width: 991px) {
+  header {
+    padding: 18px 4%;
+  }
+
+  section {
+    padding: 50px 4%;
+  }
+
+  .home-text {
+    padding: 0 4%;
+  }
+
+  .home-text h1 {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 774px) {
+
+  header {
+    padding: 12px 4%;
+  }
+
+  #menu-icon {
+    display: initial;
+    color: var(--bg-color);
+  }
+
+  header.shadow #menu-icon {
+    color: var(--text-color)
+  }
+
+  .navbar {
+    position:absolute;
+    top: -570px;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    background: var(--bg-color);
+    row-gap: 1.4rem;
+    box-shadow: 4px 4px 0 4x rgb(14 55 54 / 15%) ;
+    transition: 0.2s all linear;
+    text-align: center;
+  }
+
+  .navbar a {
+    width: 100%;
+    color: var(--text-color)
+  }
+
+  .navbar a:hover {
+    color: var(--main-color);
+    border-bottom: 2px solid var(--main-color);
+  }
+
+  .navbar a::after {
+    display: none;
+  }
+
+  .navbar.active {
+    top:100%;
+  }
+
+  .home-text h1 {
+    font-size: 2.4rem;
+  }
+
+  .btn {
+    padding: 0.6rem;
+  }
+
 
 }
